[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
aws-config = "0.3.0"
aws-sdk-secretsmanager = "0.3.0"
chrono = "0.4.19"
crc32fast = "1.3.0"
futures-channel = "0.3.19"
futures-util = "0.3.19"
hex = "0.4.3"
hmac = "0.12.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
sha2 = "0.10.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
tungstenite = "0.16.0"
url = "2.2.2"
rdkafka = { version = "0.25", features = ["cmake-build"] }